Fixed images overlapping with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ main {
 }
 
 .figure-img {
-    max-width: 500px;
+    width: 500px;
     max-height: 500px;
     object-fit: cover;
 }
